# Rag-AI-Agent

./: README.md  app.py  custom_types.py  data_loader.py  docs.odt  main.py  pyproject.toml  vector_db.py
data/: test.txt
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/27f2a623-db7b-4288-bf36-c72888d22ca5/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/27f2a623-db7b-4288-bf36-c72888d22ca5/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/324a86bd-1ca0-466a-bfe0-374ee8e2c4a9/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/91a99392-d8e9-4d9a-bc90-023448c72868/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/a96bfa44-7804-447a-9638-b5dd24ccc957/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/bb6f19d4-68c0-4f18-85f2-29d7d54caf4f/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/bb6f19d4-68c0-4f18-85f2-29d7d54caf4f/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/cd51ed66-fb5e-4a5f-8e92-cbb384b70b34/payload_index/: IDENTITY  LOG  MANIFEST-000005
